2002-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.[c,h]: Brand spankin' new parser. Seems to work for
	at least simple messages, needs a lot more love though.

	* gmime-stream*.c: Don't use a base_class init or finalize.

	* gmime-object.c: Same.

	* gmime-part.c: Same here.

	* gmime.c (g_mime_init): Call g_type_init.

	* gmime-utils.c (g_mime_utils_header_fold): Slight bugfix to get
	rid of extra whitespace at the end of a line.

	* gmime-multipart.c (g_mime_multipart_set_preface): New accesor
	function to set the multipart preface.
	(g_mime_multipart_get_preface): New accesor function to get the
	multipart preface.
	(g_mime_multipart_set_postface): New accesor function to set the
	multipart postface.
	(g_mime_multipart_get_postface): New accesor function to get the
	multipart postface.
	(write_to_stream): Don't force a preface if we don't have one.

2002-04-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-object.c: Don't tie the type-registry lifetime to the
	GMimeObject lifetime.

	* gmime.c (g_mime_init): Register our generic and multipart/* MIME
	object classes here.

	* gmime-part.c (g_mime_part_class_init): Don't register ourselves
	here anymore.

	* gmime-multipart.c (g_mime_multipart_class_init): Don't register
	ourselves here anymore.

2002-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_uuencode_close): Fixed a bug that
	crept in during my simplification.

2002-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_set_content_id): Wrap the object
	set_content_id.
	(g_mime_part_get_content_id): Same.

	* gmime-multipart.c
	(g_mime_multipart_get_subpart_from_content_id): Compare the
	object->content_id's.

	* gmime-object.c (g_mime_object_set_content_id): New function
	since the Content-Id should really be stored on the object class.
	(g_mime_object_get_content_id): Same.
	(set_header): If we are setting the Content-Id header, also set
	our internal content_id member.
	(add_header): Same.
