@@ -71,6 +71,10 @@ AC_CHECK_HEADERS(ctype.h)
 AC_CHECK_HEADERS(time.h)
 AC_CHECK_HEADERS(alloca.h)
 
+AC_CHECK_TYPE(off_t, long)
+AC_CHECK_TYPE(size_t, unsigned int)
+AC_CHECK_TYPE(ssize_t, int)
+
 AC_CHECK_FUNCS(isblank strftime localtime alloca mmap munmap msync)
 
 AC_CHECK_FUNCS(memchr memrchr memmem strlen strcpy strncpy strlcpy stpcpy strcat strncat strlcat strchr strrchr strnstr strstr strncasestr strcasestr strncasecmp strcasecmp)
